2009-07-15: Ali aliov@xfce.org
	* Provides the following standard DBus methods:
	CanReboot(),CanShutdown(),Reboot(),GetPowerSaveStatus().
	* src/xfpm-error.{c,h} correct errors name for non 
	supported shutdown/hibernate... .
	to NoHardwareSupported+Invalid cookie to Cookie not found.
	* Update TODO.
	* Update the documentation.

2009-07-09: Ali aliov@xfce.org
	* src/xfpm-xfconf.c fix a bug affecting 0.8.1.* for the properties prefix.
	* src/xfpm-engine.c Fix default idle timeout.
	* prepare 0.8.2.

2009-07-09: Ali aliov@xfce.org
	* settings/xfpm-settings.c automatically switch inactivity sleep mode 
	to hibernate if suspend is not supported.
	* Allow 15 minutes as a minimum value for idle.
	* src/xfpm-dbus-monitor.c Fix regression for detecting when HAL restarts.
	* src/xfpm-brightness-widget.c automatically detect if the running 
	Notification daemon is notify-osd and use its brightness feedback interface for 
	displaying the brightness level.
	* configure.ac.in add 'r' as a prefix for version tag.

2009-07-06 10:00 Ali aliov@xfce.org
	* 0.8.1.1 release.

2009-07-03: 22:00 Ali aliov@xfce.org
	* po/* update po files.
	
2009-07-03: 20:30 Ali aliov@xfce.org
	* po/POSTFILES.in added [type: gettext/glade] before the interface
	file to fix dropped translatable strings.
	
2009-07-03 19:30 Mike Massonnet mmassonnet@xfce.org
	* data/interfaces/Makefile.am use a sort of filter for interfaces_h 
	* data/interfaces/xfpm-settings.ui drops a forgotten #define.
	
2009-07-03 10:00 Mike Massonnet mmassonnet@xfce.org
	* Patch to avoid installing the ui file.

2009-06-30: 15:00 Ali aliov@xfce.org
	* settings/xfpm-setting.c Don't allow brightness timeout to be less than
	DPMS sleep timeout.
	
2009-06-28: 12:10 Ali aliov@xfce.org
	* Use xfpm-dbus-monitor for dbus monitoring stuff, so hal-monitor is removed.
	* hal-device.c Fix a Glib warnings when DBus is disconnected.
	
2009-06-27: 11:15 Ali aliov@xfce.org 
	* Use "/xfce4-power-manager" as a prefix for properties name to avoid