@@ -108,6 +108,17 @@ if test "x${ac_cv_have_decl_XF86XK_Hibernate}" != "xno"; then
 fi
 
 #=======================================================#
+#              Network Manager support                  #
+#=======================================================#
+AC_ARG_ENABLE([network-manager], AC_HELP_STRING([--disable-network-manager], [Disable network manager support]),
+  [ac_network_manager=$enableval], [ac_network_manager=yes])
+AC_MSG_CHECKING([whether to build with network manager support.])
+if test "x$ac_network_manager = xyes"; then
+    AC_DEFINE(WITH_NETWORK_MANAGER, 1 , [Network Manager support])
+fi
+AC_MSG_RESULT([$ac_network_manager])
+
+#=======================================================#
 #                 Panel plugins ?                       #
 #=======================================================#
 AC_ARG_ENABLE([panel_plugins],
@@ -186,9 +197,10 @@ echo "
  
 	prefix:			$prefix
 	xdg autostart:		$sysconfdir/xdg/autostart
-   	DPMS         support:   $have_dpms
-  	Build panel  plugins:   $build_panel_plugins
-   	Debug        support:   $enable_debug
+   	DPMS:   		$have_dpms
+	Network manager:	$ac_network_manager
+  	Build panel:  		$build_panel_plugins
+   	Debug:		   	$enable_debug
 --------------------------------------------------
 
 Configuration finished, type make to compile"
