@@ -1,13 +1,4 @@
-This software is a power manager for the Xfce desktop, 
-laptop users can set up a power profile for two different modes 
-"on battery power" and "on ac power", desktop users still can change 
-DPMS settings and CPU frequency using the settings dialog.
-
-The following features are supported:
-
-Battery monitoring
-Cpu frequency settings
-Monitor DPMS settings
-Suspend/Hibernate via HAL
-LCD brightness
-Lid,sleep and power switches control
+Current
+=======
+- Make it possible to compile without network manager support.
+- 
